@@ -1,8 +1,9 @@
-FROM adoptopenjdk/openjdk11-openj9:jdk-11.0.1.13-alpine-slim
-COPY target/datadog-api*.jar /datadog-api-gatherer/app.jar
+FROM eclipse-temurin:21
+RUN mkdir /opt/app
+COPY target/collector-*.jar /opt/app/app.jar
+
 EXPOSE 8080
 
-RUN apk add --no-cache tzdata
+#RUN apk add --no-cache tzdata
 ENV TZ=Europe/Berlin
-
-CMD java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Dcom.sun.management.jmxremote -noverify ${JAVA_OPTS} -jar /datadog-api-gatherer/app.jar
+CMD ["java", "-jar", "/opt/app/app.jar"]
